<resources>
    <string name="app_name">InnerLink</string>
    <string name="top_text_label">Already Have an Account?</string>
    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">New User? Register Here</string>
    <string name="forecast_label">Forecasts</string>
    <string name="notification_label">Notifications</string>
    <string name="chat_label">Chats</string>
    <string name="chat_add_label">Chat Creation</string>
    <string name="chat_manage_label">Chat Room Management</string>
    <string name="chat_room_label">Chat Room</string>
    <string name="home_label">Home</string>
    <string name="register_final">Register</string>
    <string name="contacts_label">Contacts</string>
    <string name="map_label">Add Location By Map</string>
    <string name="settings_label">Settings</string>
    <string name="sign_out_label">Sign Out</string>


    <string name="base_url">https://tcss450-innerlink.herokuapp.com/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>

    <string name="hourly_label">Hourly Forecast</string>
    <string name="conditions_label">Current Forecast</string>
    <string name="daily_label">Daily Forecast</string>
    <string name="chatRoomLabel">Chat Room</string>
    <string name="go_to">Go To</string>

    <!-- Preference Titles -->
    <string name="account_header">Account Settings</string>
    <string name="theme_header">Themes</string>

    <!-- Account Preferences -->
    <string name="username_title">Your username</string>
    <string name="reply_title">Default reply action</string>

    <!-- Theme Preferences -->
    <string name="theme">Select Theme</string>
    <string name="light_theme_title">Light theme</string>
    <string name="dark_theme_title">Dark theme</string>
    <string name="theme_def_value">Light Theme</string>

    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="dialog_remove_title">Remove existing contact</string>
    <string name="dialog_remove_message">Are you sure you would like to delete this contact?</string>
    <string name="dialog_remove_confirm">Confirm</string>
    <string name="dialog_remove_cancel">Cancel</string>

    <string name="settings_change_password">changePassword</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>
